[tool.poetry]
name = "coursework3"
version = "0.1.0"
description = ""
authors = ["AlCher38 <al.cher2023@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
